tests/snapshots/codegen_snapshot_tests__explicit_call_site_generics.snap
---
source: tests/codegen_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

#![allow(unused_imports, dead_code, unused_variables)]

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
use incan_stdlib::prelude::*;
use incan_derive::{FieldInfo, IncanClass};
fn id<T>(x: T) -> T {
    return x;
}
#[derive(Debug, Clone, FieldInfo, IncanClass)]
struct Boxed {}
impl Boxed {
    pub fn pick<T>(&self, value: T) -> T {
        return value;
    }
    /// Returns field metadata for this type.
    pub fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 0] = [];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
fn main() {
    let a = id::<i64>(1);
    let b = Boxed {};
    let c = b.pick::<i64>(2);
    return a + c;
}
