tests/snapshots/codegen_snapshot_tests__generic_methods.snap
---
source: tests/codegen_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

#![allow(unused_imports, dead_code, unused_variables)]

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
use incan_stdlib::prelude::*;
use incan_derive::{FieldInfo, IncanClass};
#[derive(Debug, Clone, FieldInfo, IncanClass)]
struct Box {}
impl Box {
    pub fn get<T: Clone>(&self, value: T) -> T {
        return value;
    }
    /// Returns field metadata for this type.
    pub fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 0] = [];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
#[derive(Debug, Clone, FieldInfo, IncanClass)]
struct Shelf<U> {
    item: U,
}
#[allow(non_snake_case, clippy::too_many_arguments)]
fn Shelf<U>(item: U) -> Shelf<U> {
    Shelf { item }
}
impl<U> Shelf<U> {
    pub fn swap<T: Clone>(&self, value: T) -> T {
        return value;
    }
    /// Returns field metadata for this type.
    pub fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 1] = [
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("item"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("item"),
                type_name: incan_stdlib::frozen::FrozenStr::new("U"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
pub trait Echo {
    fn echo<T: Clone>(&self, value: T) -> T;
}
#[derive(Debug, Clone, FieldInfo, IncanClass)]
struct Pair {}
impl Pair {
    pub fn swap<T: Clone, U: Clone>(&self, left: T, right: U) -> U {
        return right;
    }
    /// Returns field metadata for this type.
    pub fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 0] = [];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
#[derive(Debug, Clone, FieldInfo, IncanClass)]
struct EchoBox {
    marker: i64,
}
#[allow(non_snake_case, clippy::too_many_arguments)]
fn EchoBox(marker: i64) -> EchoBox {
    EchoBox { marker }
}
impl Echo for EchoBox {
    fn echo<T: Clone>(&self, value: T) -> T {
        return value;
    }
}
#[derive(Debug)]
struct Wrapper<U>(pub U);
impl<U> Wrapper<U> {
    pub fn echo<T: Clone>(&self, value: T) -> T {
        return value;
    }
    /// Returns field metadata for this type.
    pub fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 1] = [
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("0"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("0"),
                type_name: incan_stdlib::frozen::FrozenStr::new("U"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
fn main() {
    let r#box = Box {};
    let value = r#box.get(1);
    let shelf = Shelf { item: 1 };
    let shelf_value = shelf.swap("shelf".to_string());
    let pair = Pair {};
    let swapped = pair.swap("a".to_string(), "b".to_string());
    let echo_box = EchoBox { marker: 1 };
    let echoed_bool = echo_box.echo(true);
    let wrapper = Wrapper(1);
    let echoed_float = wrapper.echo(1.5f64);
}
