tests/snapshots/codegen_snapshot_tests__issue391_list_str_append_literal.snap
---
source: tests/codegen_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

#![allow(unused_imports, dead_code, unused_variables)]

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
use incan_stdlib::prelude::*;
use incan_derive::{FieldInfo, IncanClass};
pub fn columns(input_columns: Vec<String>) -> Vec<String> {
    let mut columns = vec![];
    columns
        .push(incan_stdlib::collections::list_get(&input_columns, (0) as i64).clone());
    columns.push("count".to_string());
    return columns;
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    columns(vec!["orders_total".to_string()]);
}
