tests/snapshots/codegen_snapshot_tests__newtype_checked_construction.snap
---
source: tests/codegen_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

#![allow(unused_imports, dead_code, unused_variables)]

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("0.2.0-dev.2");
use incan_stdlib::prelude::*;
use incan_derive::{FieldInfo, IncanClass};
#[derive(Debug, Clone, Copy)]
struct UserId(pub i64);
#[derive(Debug, Clone, Copy)]
struct Ratio(pub f64);
#[derive(Debug, Clone, Copy)]
struct Attempts(pub i64);
impl Attempts {
    fn from_underlying(n: i64) -> Result<Attempts, String> {
        if n <= 0 {
            return Err("attempts must be >= 1".to_string());
        }
        return Ok(Attempts(n));
    }
    /// Returns field metadata for this type.
    pub fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 1] = [
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("0"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("0"),
                type_name: incan_stdlib::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
#[derive(Debug)]
struct Email(pub String);
impl Email {
    fn from_str(v: String) -> Result<Email, String> {
        if !incan_stdlib::strings::str_contains(&v, &"@") {
            return Err("missing @".to_string());
        }
        return Ok(Email(incan_stdlib::strings::str_lower(&v)));
    }
    /// Returns field metadata for this type.
    pub fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 1] = [
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("0"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("0"),
                type_name: incan_stdlib::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
fn main() {
    let uid = UserId(42);
    let ratio = Ratio(0.5f64);
    let attempts = Attempts::from_underlying(5)
        .expect("validated newtype construction failed: Attempts::from_underlying");
    let email = Email::from_str("alice@example.com".to_string())
        .expect("validated newtype construction failed: Email::from_str");
    println!(
        "{}", { let __parts : [& str; 5usize] = ["", " ", " ", " ", ""]; let __args : Vec
        < String > = vec![format!("{}", uid.0), format!("{}", ratio.0), format!("{}",
        attempts.0), format!("{}", email.0)]; incan_stdlib::strings::fstring(& __parts, &
        __args) }
    );
}
