tests/snapshots/codegen_snapshot_tests__rfc041_structural_coercion.snap
---
source: tests/codegen_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

#![allow(unused_imports, dead_code, unused_variables)]

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
use incan_stdlib::prelude::*;
use incan_derive::{FieldInfo, IncanClass};
use std::collections::HashMap;
fn accept_option(value: Option<i64>) -> Option<i64> {
    return value;
}
fn accept_names(values: Vec<String>) -> Vec<String> {
    return values;
}
fn accept_scores(
    values: std::collections::HashMap<String, f64>,
) -> std::collections::HashMap<String, f64> {
    return values;
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let maybe_count = Some(42);
    let names = vec!["alice".to_string(), "bob".to_string()];
    let scores = [("latency", 1.5f64)].into_iter().collect::<HashMap<_, _>>();
    accept_option(maybe_count);
    accept_names(names);
    accept_scores(scores);
}
