tests/snapshots/codegen_snapshot_tests__rfc052_pub_static.snap
---
source: tests/codegen_snapshot_tests.rs
assertion_line: 982
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

#![allow(unused_imports, dead_code, unused_variables)]

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
use incan_stdlib::prelude::*;
use incan_derive::{FieldInfo, IncanClass};
pub use widgets::SHARED_ITEMS;
fn main() {
    let __incan_static_arg_0 = 1;
    {
        SHARED_ITEMS
            .with_mut(|__incan_static_value| {
                __incan_static_value.push(__incan_static_arg_0)
            })
    };
    let mut live = { incan_stdlib::storage::StaticBinding::from_static(&SHARED_ITEMS) };
    let __incan_static_arg_0 = 2;
    live.with_mut(|__incan_static_value| {
        __incan_static_value.push(__incan_static_arg_0)
    });
    println!("{}", { SHARED_ITEMS.get() } .len() as i64);
}
