tests/snapshots/codegen_snapshot_tests__std_serde_json_compiled.snap
---
source: tests/codegen_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

#![allow(unused_imports, dead_code, unused_variables)]

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("0.2.0-dev.2");
use incan_stdlib::prelude::*;
use incan_derive::{FieldInfo, IncanClass};
pub trait Serialize {
    fn to_json(&self) -> String;
}
pub trait Deserialize {
    fn from_json(json_str: String) -> Result<_, String>;
}
