tests/snapshots/codegen_snapshot_tests__std_serde_json_import.snap
---
source: tests/codegen_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

#![allow(unused_imports, dead_code, unused_variables)]

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("0.2.0-dev.2");
use incan_stdlib::prelude::*;
use incan_derive::{FieldInfo, IncanClass};
use serde::{Serialize, Deserialize};
#[derive(serde::Serialize, serde::Deserialize, Debug, Clone, FieldInfo, IncanClass)]
struct Config {
    host: String,
    port: i64,
    debug: bool,
}
#[allow(non_snake_case, clippy::too_many_arguments)]
fn Config(host: String, port: i64, debug: bool) -> Config {
    Config { host, port, debug }
}
impl Config {
    /// Returns field metadata for this type.
    pub fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 3] = [
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("host"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("host"),
                type_name: incan_stdlib::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("port"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("port"),
                type_name: incan_stdlib::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("debug"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("debug"),
                type_name: incan_stdlib::frozen::FrozenStr::new("bool"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
    /// Serialize this model to a JSON string
    pub fn to_json(&self) -> String {
        serde_json::to_string(self)
            .unwrap_or_else(|_| {
                incan_stdlib::errors::raise_json_serialization_error(stringify!(Config))
            })
    }
    /// Deserialize a JSON string into this model
    pub fn from_json(json_str: String) -> Result<Self, String> {
        serde_json::from_str(&json_str)
            .map_err(|e| incan_stdlib::errors::json_decode_error_string(e))
    }
}
